# delegate

./: .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build.py  conanfile.py
.travis/: install.sh
